*SVN*

* Make sure the invoke task gives a sane error when the COMMAND value is omitted [halorgium]

* Make sure variables are conditionally set in the deploy recipes, so as not to clobber values set elsewhere [Jamis Buck]

* Fix "input stream is empty" errors from HighLine on prompt [Jamis Buck]

* Added "synchronous_connect" setting to try and work around SFTP hangs for certain users [Jamis Buck]

* Auto-require the SSH shell service, to avoid race conditions [Jamis Buck]

* Add a millisecond sleep in upload to reduce CPU impact [Jamis Buck]

* Allow the logger to be set via Configuration#logger= [Jamis Buck]

* Allow $CAPISTRANO:HOST$ to be used in filenames to the put command [Jamis Buck]

* Allow execute_on_servers to be called without a current task again [Jamis Buck]

* Put $stdout in sync mode, so that Net::SSH prompts are displayed [Jamis Buck]

* Make sure deploy:check aborts if it fails [Jamis Buck]

* Spelling corrections in docs [Tim Carey-Smith, Giles Bowkett]


*1.99.3 (2.0 Preview 4)* June 28, 2007

* Don't break task descriptions on a period that appears in the middle of a sentence [Jamis Buck]

* Added support for :on_error => :continue in task definitions, allowing tasks to effectively ignore connection and execution errors that occur as they run [Rob Holland]

* Use correct parameters for Logger constructor in the SCM and Strategy base initializers [Jamis Buck]

* Set LC_ALL=C before querying the revision, to make sure the output is in a predictable locale and can be parsed predictably [via Leandro Nunes dos Santos]

* Add :copy_remote_dir variable for the :copy strategy, to indicate where the archive should be copied to on the remote servers [Jamis Buck]

* Make the awk use in the dependencies code work with POSIX awk [mcornick]

* Make variable accesses thread safe [via Adrian Danieli]

* Make user input for yes/no prompts work correctly in the Mercurial module [Matthew Elder]
